--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-{
+*{
   font-family: sans-serif;
 }
 body{
@@ -11,4 +11,8 @@ body{
 ::selection{
   color: #FFFFFF;
   background: #000000;
+}
+p.no_output{
+  font-family: monospace, sans-serif;
+  text-shadow: 0 0 10px #FFFFFF;
 }
